--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clarifai": "^2.9.1",
     "clarifai-nodejs-grpc": "^8.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "knex": "^2.3.0",
     "pg": "^8.8.0"
